<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_scroll_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_detail_price_bar"
        >

        <ImageButton
            android:id="@+id/ib_detail_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@drawable/selector_back_arrow"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:elevation="3dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ScrollView
            android:id="@+id/sv_detail_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_detail_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/iv_detail_picture"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/sample1"
                        android:scaleType="centerCrop"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <ImageButton
                        android:id="@+id/ib_detail_pic_before"
                        android:layout_width="40dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/baseline_navigate_before_24"

                        app:layout_constraintTop_toTopOf="@+id/iv_detail_picture"
                        app:layout_constraintStart_toStartOf="@+id/iv_detail_picture"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_picture"
                        />

                    <ImageButton
                        android:id="@+id/ib_detail_pic_next"
                        android:layout_width="40dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="5dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/baseline_navigate_next_24"

                        app:layout_constraintTop_toTopOf="@+id/iv_detail_picture"
                        app:layout_constraintEnd_toEndOf="@+id/iv_detail_picture"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_picture"
                        />

                    <ImageView
                        android:id="@+id/iv_detail_bar1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"

                        app:layout_constraintTop_toBottomOf="@+id/iv_detail_picture"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_detail_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"

                        app:layout_constraintTop_toBottomOf="@+id/iv_detail_bar1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >

                        <ImageView
                            android:id="@+id/iv_detail_profile_pic"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/baseline_account_circle_24"

                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />

                        <TextView
                            android:id="@+id/tv_detail_profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/name"
                            android:textSize="15sp"
                            android:textStyle="bold"

                            app:layout_constraintTop_toTopOf="@id/iv_detail_profile_pic"
                            app:layout_constraintStart_toEndOf="@+id/iv_detail_profile_pic"
                            />

                        <TextView
                            android:id="@+id/tv_detail_profile_loca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/address"
                            android:textSize="13sp"

                            app:layout_constraintTop_toBottomOf="@+id/tv_detail_profile_name"
                            app:layout_constraintStart_toStartOf="@+id/tv_detail_profile_name"
                            />

                        <TextView
                            android:id="@+id/tv_detail_profile_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="60dp"
                            android:text="@string/temp"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/light_orange"

                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                        <ImageView
                            android:id="@+id/iv_detail_profile_tempbar"
                            android:layout_width="70dp"
                            android:layout_height="8dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/temp_bar"

                            app:layout_constraintTop_toBottomOf="@+id/tv_detail_profile_temp"
                            app:layout_constraintEnd_toEndOf="@+id/tv_detail_profile_temp"
                            />
                        <ImageView
                            android:id="@+id/iv_detail_profile_tempimo"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/lv1"

                            app:layout_constraintTop_toTopOf="@id/tv_detail_profile_temp"
                            app:layout_constraintStart_toEndOf="@+id/tv_detail_profile_temp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_detail_profile_tempbar"
                            />
                        <TextView
                            android:id="@+id/tv_detail_profile_manner_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/manner_temp"
                            android:textSize="12sp"
                            android:clickable="true"

                            app:layout_constraintTop_toBottomOf="@+id/iv_detail_profile_tempimo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/iv_detail_bar2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"

                        app:layout_constraintTop_toBottomOf="@+id/cl_detail_profile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <TextView
                        android:id="@+id/tv_detail_description_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:maxLines="2"

                        app:layout_constraintTop_toBottomOf="@+id/cl_detail_profile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <TextView
                        android:id="@+id/tv_detail_description_context"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/context"
                        android:textSize="15sp"

                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_price_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageButton
            android:id="@+id/ib_detail_price_like"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@color/transparent"
            android:src="@drawable/baseline_favorite_border_24"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/iv_detail_price_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_detail_price_like"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/price"
            android:textSize="20sp"
            android:textStyle="bold"
            android:ems="10"
            android:maxLines="1"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_detail_price_line"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_price_chat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_btn"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/chat"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>