<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_recycle_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_recycle_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/iv_recycle_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/sample1"
            />

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/tv_recycle_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"

        app:layout_constraintTop_toTopOf="@+id/cv_recycle_pic"
        app:layout_constraintStart_toEndOf="@+id/cv_recycle_pic"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_recycle_loca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:textSize="13sp"

        app:layout_constraintTop_toBottomOf="@+id/tv_recycle_title"
        app:layout_constraintStart_toStartOf="@+id/tv_recycle_title"
        />
    <TextView
        android:id="@+id/tv_recycle_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/tv_recycle_loca"
        app:layout_constraintStart_toStartOf="@+id/tv_recycle_loca"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_recycle_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/iv_recycle_chat"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/transparent"
            android:src="@drawable/baseline_forum_24"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_recycle_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="0"
            android:textSize="15sp"

            app:layout_constraintTop_toTopOf="@+id/iv_recycle_chat"
            app:layout_constraintStart_toEndOf="@+id/iv_recycle_chat"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recycle_chat"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_recycle_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        app:layout_constraintStart_toEndOf="@+id/cl_recycle_chat"
        app:layout_constraintTop_toTopOf="@+id/cl_recycle_chat"
        app:layout_constraintBottom_toBottomOf="@+id/cl_recycle_chat"
        >

        <ImageView
            android:id="@+id/iv_recycle_like"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/transparent"
            android:src="@drawable/baseline_favorite_border_24"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_recycle_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="0"
            android:textSize="15sp"

            app:layout_constraintTop_toTopOf="@+id/iv_recycle_like"
            app:layout_constraintStart_toEndOf="@+id/iv_recycle_like"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recycle_like"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_recycle_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>